--- a/css/escritorio/grafico.css
+++ b/css/escritorio/grafico.css
@@ -1,6 +1,5 @@
 
 .Grafica{
-
     max-width: 113.3rem;
     max-height: 83.1rem;
     
@@ -10,8 +9,11 @@
     margin: auto;
     padding-top: 9.9rem;
     padding-bottom: 14.986rem;
-   
     margin-top: 2.7rem;
+    margin-bottom: 17rem;
+}
+body{
+    background-color: var(--grisClaro);
 }
 .Grafica h3{
     font-family: var(--subtitulos);
