--- a/css/escritorio/configuracionDesktop.css
+++ b/css/escritorio/configuracionDesktop.css
@@ -1,6 +1,13 @@
 #root{
     max-width: 192vw;
 }
+#root2{
+    max-width: 192vw;
+}
 #footer{
+    max-width: 192vw;
+}
+
+#footer2{
     max-width: 192vw;
 }
