--- a/css/escritorio/bromatologia.css
+++ b/css/escritorio/bromatologia.css
@@ -13,9 +13,7 @@
     font-weight: 400;
 }
 
-/********************/
-
-
+/*********DISEÑO DE LA GALERIA DE BROMATOLOGIA***********/
 #galeria {
     padding: 0rem 7rem;
     
@@ -26,6 +24,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+
 }
 
 
@@ -42,7 +41,11 @@
     -moz-box-shadow: -1px 17px 0px -9px rgba(64,110,63,1);
 
 }
-
+.item:hover{
+    background-color:#406e3f69;
+    cursor: pointer;
+    transition: 0.5s;
+}
 .cj_img img {
     width: 25.1rem;
     height: 23.5rem;
