--- a/css/escritorio/footer.css
+++ b/css/escritorio/footer.css
@@ -1,155 +1,63 @@
-    .infoInfood{
-        max-width: 111.5rem;
-        height: auto;
-        margin: auto;
-        padding-bottom: 13.8rem;
-        padding-top: 13.8rem;
-    }
-
-.ventana_titulo{
-    font-size: 6.4rem;
-    margin-bottom: 11.3rem;
-    
-    color: var( --verdeClaro);/*<--ACA*/
-    
+.integrantes{
+    flex-direction: row;
     display: flex;
     justify-content: center;
-    font-weight: 400;
-    font-family: var(--titulos);
-}
-
-.padreFooter{
-    display: flex;
-    flex-direction:row-reverse;
-    justify-content: center;
     align-items: center;
-    /* margin-bottom: 13.8rem; */
+    padding-top: 10.5rem;
 }
-
-.ventana_titulo3{
-    font-size: 1.6rem;
-    color: var(--verdeClaro);
-    width: 54rem;
-    height: 22.7rem;
-    /* margin-left: 3rem; */
-    margin-right: 15.7rem;
-}
-.ventana_titulo3 p{
-    font-size: 1.6rem;
-}
-
-.ventana_fondo{
-    width: 41.8rem;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: var(--grisOscuro); */
-
-    background-color:rgba(149, 153, 136, 0.41);
-    box-shadow: -1px 17px 0px -9px rgba(64,110,63,1);
-    -webkit-box-shadow: -1px 17px 0px -9px rgba(64,110,63,1);
-    -moz-box-shadow: -1px 17px 0px -9px rgba(64,110,63,1);
-    align-items: center;
+.caja1{
+    width: 35rem;
+    height: 30rem;
+    margin-right: 2rem;
     padding: 0rem 2rem;
+    background-color: var(--grisOscuro);
+    text-align: center;
 }
 
-.ventana_img{
-    width: 41.8rem;
-    height: 18.4rem;
-}
-
-.ventana_titulo5{
-    
-   margin-top: 2rem;
-   font-family: var(--titulos);
-   font-weight: 400;
-    color: var(--verdeClaro);
-}
-
-.ventana_parrafo{
-    font-size: 1.6rem;
-    margin-top: 1rem;
-   margin-bottom: 4rem;
-   text-align: center;
-   align-items: center;
-}
-.ventana_titulo3 h2{
-    font-family: var(--titulos);
+.caja1 h1{
+    font-size: 3.6rem;
     font-weight: 400;
-    margin-bottom: 1rem;
+    font-family: var(--titulos);
+    margin-top: 2.2rem;
+    color: var(--verdeClaro);
+    
+}
+
+.caja1 p{
+    font-size: 2rem;  
+    margin-top: 2rem;
+    align-items: center;
+}
+
+#biologos h1{
+    margin-bottom: 4.7rem;
 }
 
 @media only screen and (max-width:37.5rem) {
 
-    .infoInfood{
-        padding-bottom: 5.5rem;
-        padding-top: 5.5rem;
+    .integrantes{
+        padding-top: 2.9rem;
     }
-    .padreFooter{
-        max-width: 36.4rem;
-        padding-bottom: 5.5rem;
-        padding-top: 3.5rem;
 
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
+    .caja1{
+        max-width: 11.2rem;
+        max-height: 20rem;
+        margin-right: 0.7rem;
+        padding: 0;
+    }
 
-        
-    }
-    .ventana_titulo3{
-        font-size: 1.6rem;
-        color: var(--verdeClaro);
-        width: 54rem;
-        height: 22.7rem;
-        margin-right: 15.7rem;
-    }
-    .ventana_img{
-        width: 31.2rem;
-        height: 16.7rem;
-    }
-    .ventana_titulo{
-        max-width: 31.4rem;
-    }
-    .ventana_titulo3 h2{
-        font-family: var(--titulos);
+    .caja1 h1{
+        font-size: 1.3rem;
         font-weight: 400;
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        }
-        .ventana_titulo3 p{
-            
-            font-size: 1.1rem;
-            margin-bottom: 1rem;
-        }
-        .ventana_titulo5{
-            font-size: 1.6rem;
-        }
-
-    .ventana_parrafo{
-        font-size: 1.1rem;
+        margin-top: 2.2rem;        
     }
-    .ventana_fondo{
-        font-size: 1.2rem;
-        max-width: 31.2rem;
-        max-height: 30rem;
+    
+    .caja1 p{
+        font-size: 1.1rem;  
+        margin-top: 2rem;
+        align-items: center;
     }
-    .ventana_titulo3{
-        width: 31.2rem;
-        height: 18.9rem;
-        padding-top: 6.7rem;
-        margin: auto;
-    }
-
-     .ventana_titulo{
-        margin: auto;
-        margin-bottom: 3rem;
-        font-size: 3.2rem;
-     }
-    .ventana_fondo{
-        width: 31.2rem;
-        height: 30rem;
-        margin: auto;
+    #biologos h1{
+        margin-bottom: 2.4rem;
     }
 }
